Done with the non-preemtive processes, no styles yet

--- a/index.html
+++ b/index.html
@@ -21,11 +21,26 @@
 
         <br><br>
  
-        <div id="answer"></div>
+        <div id="inputsArea"></div>
 
         <button onclick="onSubmit()">Submit</button>
 
+        <div id="answerArea"></div>
+
+
+
         <script type="text/javascript" src="processDef.js"></script>
+
+        <script type="text/javascript" src="finalize.js"></script>
+
+        <script type="text/javascript" src="src/FCFS.js"></script>
+        <script type="text/javascript" src="src/Priority-non-preemtive.js"></script>
+        <script type="text/javascript" src="src/Priority-preemtive.js"></script>
+        <script type="text/javascript" src="src/RR.js"></script>
+        <script type="text/javascript" src="src/SJF-non-preemtive.js"></script>
+        <script type="text/javascript" src="src/SJF-preemtive.js"></script>
+        
         <script type="text/javascript" src="script.js"></script>
+        
     </body>
 </html>
