Fixed the styling issues

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="inputsDiv">
                 <div id="inputsArea"></div>
                 <button href="#" id="submitButton" onclick="handleNoSimulate(); onSubmit()">Show Chart</button>
-                <button href="#" id="simulateButton" onclick="handleSimulate(); onSubmit()">Simulate Chart</button>
+                <button href="#" id="simulateButton" onclick="handleSimulate(); onSubmit()">Simulate Action</button>
             </div>
         </div>
 
