--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,10 @@
                 <div id="inputsArea"></div>
                 <button href="#" id="submitButton" onclick="handleNoSimulate(); onSubmit()">Show Chart</button>
                 <button href="#" id="simulateButton" onclick="handleSimulate(); onSubmit()">Simulate Action</button>
+                <br/><br/>
+                <div id="namesDiv">
+                    <button href="#" id="namesButton" onclick="handleChangeNames()">Custom Process Naming</button>
+                </div>
             </div>
         </div>
 
