--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>OS</title>
+        <title>OS Project</title>
         <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
 
